<resources>

    // activity_register.xml
    <string name="app_name">MyGameProjektSpecht</string>
    <string name="title_register">Registrieren</string>
    <string name="name">Name</string>
    <string name="passwort">Passwort</string>
    <string name="confirm_passwort">Passwort bestätigen</string>
    <string name="btn_register">Registrieren</string>
    <string name="btn_sign_in">Anmelden</string>

    // activity_login.xml
    <string name="login">Login</string>
    <string name="avatar">Avatar</string>
    <string name="note">Du hast noch keinen Account? Hier <b><u>registrieren</u></b>.</string>

    // activity_main.xml
    <string name="mygame">My Game</string>
    <string name="start_game">Spiel starten</string>
    <string name="highscores">Highscores</string>
    <string name="settings">Einstellungen</string>
    <string name="about_game">Über das Spiel</string>

    // activity_start_game.xml
    <string name="coming_soon">Coming soon ...</string>

    // activity_highscores.xml
    <string name="title_highscores">Highscores</string>

    // activity_settings.xml, activity_about_game.xml
    <string name="user">Username</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="userFirst">Dennis</string>
    <string name="userSecond">Antonia</string>
    <string name="userThird">Lino</string>
    <string name="userFourth">Brian</string>
    <string name="userFifth">Maik</string>
    <string name="levelFirst">Level 10</string>
    <string name="scoreFirst">123 Pkte.</string>
    <string name="levelSecond">Level 9</string>
    <string name="scoreSecond">112 Pkte.</string>
    <string name="levelThird">Level 9</string>
    <string name="scoreThird">107 Pkte.</string>
    <string name="levelFourth">Level 7</string>
    <string name="scoreFourth">86 Pkte.</string>
    <string name="levelFifth">Level 2</string>
    <string name="scoreFifth">54 Pkte.</string>
    <string name="spielen">Spielen</string>
    <string name="sieger">Sieger</string>
    <string name="change_settings">Hier kannst du deine <b><u>Einstellungen ändern</u></b>.</string>

    // HighscoresActivity.java
    <string name="name_highscores">Peter</string>
    <string name="level_highscores">Level 3</string>
    <string name="points_highscores">143 Pkte.</string>

    // change_settings.xml
    <string name="title_change">Einstellungen</string>
    <string name="btn_change">Änderungen speichern</string>

</resources>