<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/gradient_background">

    <ImageView
        android:id="@+id/my_game_IMG"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_marginTop="34dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_game_title_TV"
        app:srcCompat="@mipmap/gamer" />

    <Button
        android:id="@+id/my_game_start_game_BTN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="@color/btn"
        android:padding="12dp"
        android:text="@string/start_game"
        android:textSize="18sp"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_game_IMG" />

    <Button
        android:id="@+id/my_game_highscores_BTN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="@color/btn"
        android:padding="12dp"
        android:text="@string/highscores"
        android:textSize="18sp"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_game_start_game_BTN" />

    <Button
        android:id="@+id/my_game_settings_BTN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="@color/btn"
        android:padding="12dp"
        android:text="@string/settings"
        android:textSize="18sp"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_game_highscores_BTN" />

    <Button
        android:id="@+id/my_game_about_game_BTN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="@color/btn"
        android:padding="12dp"
        android:text="@string/about_game"
        android:textSize="18sp"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_game_settings_BTN" />

    <TextView
        android:id="@+id/my_game_title_TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/mygame"
        android:textColor="@color/btn"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        app:layout_constraintBottom_toBottomOf="@+id/my_game_start_game_BTN"
        app:layout_constraintStart_toStartOf="@+id/my_game_start_game_BTN"
        app:layout_constraintTop_toTopOf="@+id/my_game_start_game_BTN"
        app:srcCompat="@drawable/baseline_play_circle_outline_24" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        app:layout_constraintBottom_toBottomOf="@+id/my_game_highscores_BTN"
        app:layout_constraintStart_toStartOf="@+id/my_game_highscores_BTN"
        app:layout_constraintTop_toTopOf="@+id/my_game_highscores_BTN"
        app:srcCompat="@drawable/baseline_scoreboard_24" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        app:layout_constraintBottom_toBottomOf="@+id/my_game_settings_BTN"
        app:layout_constraintStart_toStartOf="@+id/my_game_settings_BTN"
        app:layout_constraintTop_toTopOf="@+id/my_game_settings_BTN"
        app:srcCompat="@drawable/baseline_settings_24" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        app:layout_constraintBottom_toBottomOf="@+id/my_game_about_game_BTN"
        app:layout_constraintStart_toStartOf="@+id/my_game_about_game_BTN"
        app:layout_constraintTop_toTopOf="@+id/my_game_about_game_BTN"
        app:srcCompat="@drawable/baseline_info_outline_24" />
</androidx.constraintlayout.widget.ConstraintLayout>